css/style.scss
/* ... */
/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: $base-font-weight;
}



/**
 * Links
 */
a {
    text-decoration: none;

    &:hover {
        border-bottom: 1px dotted;
    }

    &.page-link:hover {
        border-bottom: 1px dotted;
    }
    &.postLink:hover{
        border-bottom: 1px dotted;
    }
    &.post-title-link:hover{
        border-bottom: 1px dotted !important;
    }
}



/**
 * Blockquotes
 */
blockquote {
    border-left: 4px solid;
    padding-left: $spacing-unit / 2;
    font-size: 18px;
    letter-spacing: -1px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
    border: 1px solid;
    border-radius: 3px;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}



/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;
    }
}

.post {
  font-family: "Source Sans Pro";
  font-size: 18px;
  font-weight: 300;
  padding-top: 0;
}
.home{
  padding-bottom: 5em;
}
.download {
  padding: 10px;
}
.authorKeyword {
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 2px;
  text-indent: 2px;
  padding-top:0.5em;
}
.writtenBy {
  letter-spacing: 0;
  text-indent: 0;
  text-transform: uppercase;
}
.archive-intro {
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 2px;
  text-indent: 2px;
}
.archiveIntro {
  text-align: center;
}
.hint {
  text-transform: uppercase;
  font-size: 11px;
  letter-spacing: 2px;
  text-indent: 2px;
}
.example {
  font-family: 'Menlo';
  padding: 10px;
}
.manual {
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 2px;
  text-indent: 2px;
}
.postContent {
  padding-top: 3.5em;
  text-align: center;
  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
  padding-right: $spacing-unit * 4;
  padding-left: $spacing-unit * 4;
}
.postDate {
  float: left;
  text-transform: uppercase;
  font-family: "Source Sans Pro";
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 2px;
  text-indent: 2px;
}
.postTag {
  float: right;
}
.postTitle {
  font-weight: 400;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 3px;
  text-indent: 3px;
}
/**
 * Site header
 */
.site-header {
  border-top: 5px solid;
  border-bottom: 1px solid;
  min-height: 56px;
  // Positioning context for the mobile navigation icon
  position: relative;
}
.site-title {
  font-size: 64px;
  font-weight: 100;
  font-family: 'PT Sans';
  text-transform: capitalize;
  font-weight: 500;
  margin-top: 1em;
  @include media-query($on-palm) {
      .wrapper {
        font-size: 32px;
      }
  }
}
.site-description {
  font-size: 14px;
  letter-spacing: 2px;
  text-indent: 6px;
  font-family: 'Josefin Sans';
}
.exclamationMark {
  padding-left: 2em;
  padding-right: 2em;
}
.site-navigation {
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: 2px;
  text-indent: 6px;
  font-family: 'Josefin Sans';
  font-weight: 300;
  padding-top: 5em;
}
.page-title {
  text-transform: uppercase;
  letter-spacing: 2px;
  text-indent: 2px;
  font-family: "PT Sans";
  font-size: 12px;
  text-align:center;
}
.page-tagline {
  font-size: 18px;
  font-family: "PT Sans";
  text-align: center;
  text-transform: lowercase;
}
.site-nav {
  .page-link {
    line-height: $base-line-height;
    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }
  }
  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: $spacing-unit / 2;
    border-radius: 5px;
    text-align: right;
    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;
      > svg {
        width: 18px;
        height: 15px;
      }
    }
    .trigger {
      clear: both;
      display: none;
    }
    &:hover .trigger {
      display: block;
      padding-bottom: 5px;
    }
    .page-link {
      display: block;
      padding: 5px 10px;
      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 20px;
    }
  }
}
/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid;
  padding: $spacing-unit 0;
}
.footer-heading {
  font-size: 18px;
  margin-bottom: $spacing-unit / 2;
}
.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}
.small-site-title {
  font-family: "PT Sans";
}
.footer-col-wrapper {
  font-size: 15px;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}
.footer-content {
  font-family: "Josefin Sans";
  font-weight: 300;
  letter-spacing: 1px;
}
/* ... */

